--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-icons": "^5.5.0",
     "react-infinite-scroll-component": "^6.1.1",
     "react-router-dom": "^7.13.0",
+    "react-top-loading-bar": "^3.0.2",
     "tailwindcss": "^4.1.18"
   },
   "devDependencies": {
